gitops/components/jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-ci
  labels:
    app.kubernetes.io/part-of: banking-demo
    cluster: east
