gitops/components/jenkins/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
  namespace: banking-ci
  labels:
    app.kubernetes.io/name: jenkins
spec:
  host: jenkins.apps.cluster-k7kqp.k7kqp.sandbox3321.opentlc.com
  to:
    kind: Service
    name: jenkins
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
